--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,10 @@
   ],
   "rules": {
     "no-use-before-define": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "no-trailing-spaces": "off",
+    "object-curly-spacing": "off",
+    "array-callback-return": "off",
+    "indent": "off"
   }
 }
